# neural-vcv-synths

./: .gitignore  .gitmodules  README.md
cpp/: makefile
cpp/Nash-Suite/: CMakeLists.txt  Makefile  plugin.json
cpp/Nash-Suite/src/: convolver.cpp  convolver.h  ddsp.cpp  ddsp_model.cpp  ddsp_model.h  dr_wav.c  dr_wav.h  plugin.cpp  plugin.hpp  weight_tools.cpp
cpp/Rack-SDK/: compile.mk
cpp/scripts/: init-env.sh
cpp/weight_manipulation/: CMakeLists.txt  main.cpp  weight_tools.cpp  weight_tools.h
demoes/: ddsp_example_patch.vcv
